# db-context-enrichment

./: .release-please-manifest.json  CHANGELOG.md  README.md  gemini-extension.json  main.py  pyinstaller.spec  pyproject.toml  release-please-config.json
.github/workflows/: mcp_tests.yml  release-please.yaml  release.yml  release_pipeline.yaml
bootstrap/: bootstrap_generator.py
commands/autoctx/: bootstrap.toml  evaluate.toml  generate-dataset.toml  (+2 more)
common/: context_mutator.py
facet/: facet_generator.py
mcp/: .gitignore  CHANGELOG.md  GEMINI.md  README.md  build_extension_config.py  install_toolbox.sh  main.py  pyinstaller.spec  pyproject.toml
mcp/bootstrap/: bootstrap_generator.py
mcp/commands/: generate-dataset.toml  setup-database-connection.toml
mcp/commands/autoctx/: evaluate.toml  init.toml
mcp/common/: context_mutator.py
mcp/evaluate/: evaluate_generator.py
mcp/evaluate/db_generators/: alloydb.py  base.py  mysql.py  postgres.py  spanner.py
mcp/skills/autoctx-bootstrap/: SKILL.md
mcp/skills/autoctx-evaluate/: SKILL.md
mcp/skills/autoctx-evaluate/references/: alloydb-postgres.md  cloud-sql-postgres.md
mcp/skills/autoctx-hillclimb/: SKILL.md
mcp/skills/autoctx-init/: SKILL.md
mcp/skills/autoctx-init/references/: alloydb-postgres.md  cloud-sql-mysql.md  cloud-sql-postgres.md  spanner.md
mcp/skills/dataset-generation/: SKILL.md
mcp/tests/common/: context_mutator_test.py
mcp/tests/evaluate/: evaluate_generator_test.py
mcp/tests/evaluate/db_generators/: alloydb_test.py  base_test.py  mysql_test.py  postgres_test.py  spanner_test.py
prompts/: __init__.py
template/: template_generator.py
tests/: main_test.py
value_search/: match_templates.py
(+61 files in other folders)
