[project]
name = "db-context-enrichment"
version = "0.3.5"
description = "A FastMCP server for generating natural language to SQL templates from database schemas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "google-genai>=1.46.0",
    "toolbox-core>=0.5.2",
]

[project.scripts]
db-context-enrichment = "main:mcp.run"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
py-modules = ["main"]
packages = ["template", "facet", "common", "model", "prompts"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
