[project]
name = "db-context-enrichment"
version = "0.3.0"
description = "A FastMCP server for generating natural language to SQL templates from database schemas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "google-genai>=1.46.0",
    "toolbox-core>=0.5.2",
    "google-cloud-geminidataanalytics>=0.1.0",
]

[project.scripts]
db-context-enrichment = "main:mcp.run"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
py-modules = ["main"]
packages = ["template", "facet", "value_search", "common", "model", "prompts", "bootstrap", "evaluate"]

[tool.pytest.ini_options]
pythonpath = "."

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

[tool.db-context-enrichment]
toolbox_version = "0.28.0"
evalbench_version = "1.1.0"
